<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#084177"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/amc_tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/amc_tv_nombre"
        android:textStyle="bold"
        android:textColor="#FBC490"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amc_iv_imagen">

    </TextView>

    <ImageView
        android:id="@+id/amc_iv_imagen"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:contentDescription="@string/imageExample"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/example">
    </ImageView>

    <TextView
        android:id="@+id/amc_tv_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/amc_tv_descripcion"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textAlignment="textStart"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amc_tv_nombre">
    </TextView>

    <TextView
        android:id="@+id/precio_tv"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/precio_tv"
        android:textStyle="bold"
        android:textColor="#fbc490"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/amc_tv_precio"
        app:layout_constraintTop_toTopOf="@+id/amc_tv_precio">
    </TextView>

    <TextView
        android:id="@+id/amc_tv_precio"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/amc_tv_precio"
        android:textStyle="bold"
        android:textColor="#fbc490"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amc_tv_descripcion">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>